--- a/src/index.css
+++ b/src/index.css
@@ -92,3 +92,6 @@ transform: translate(-50%, -50%);
   box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
 
+.App {
+  text-align: center;
+}
